--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
             <form action="#">
                 <h1>Create Account</h1>
                 <div class="social-container">
-                    <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-                    <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="social">
+                        <img src="./assets/facebook-preto.png" alt="icone do facebook" width="50" height="50" />
+                        <i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social">
+                        <img src="./assets/vecteezy_google-icon-logo-symbol_22613027.png" alt="icone do google" width="50" height="50" />
+                        <i class="fab fa-google-plus-g"></i></a>
+                    <a href="#" class="social">
+                        <img src="./assets/linkedin.png" alt="icone do linkedin" width="50" height="50"  />
+                        <i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email for registration</span>
                 <input type="text" placeholder="Name" />
@@ -29,13 +35,19 @@
             <form action="#">
                 <h1>Sign in</h1>
                 <div class="social-container">
-                    <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-                    <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="social">
+                        <img src="./assets/facebook-preto.png" alt="icone do facebook" width="50" height="50" />
+                        <i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social">
+                        <img src="./assets/vecteezy_google-icon-logo-symbol_22613027.png" alt="icone do google" width="50" height="50" />
+                        <i class="fab fa-google-plus-g"></i></a>
+                    <a href="#" class="social">
+                        <img src="./assets/linkedin.png" alt="icone do linkedin" width="50" height="50" />
+                        <i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your account</span>
                 <input type="email" placeholder="Email" />
-                <input type="password" placeholder="Password" />
+                <input type="password" placeholder="Password" /> 
                 <a href="#">Forgot your password?</a>
                 <button>Sign In</button>
             </form>
@@ -56,6 +68,7 @@
         </div>
     </div>
 <script src="script.js"></script>
+
     
 </body>
 </html>
