--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container" id="container">
         <div class="form-container sign-up-container">
             <form action="#">
-                <h1>Create Account</h1>
+                <h1>Create CONTA</h1>
                 <div class="social-container">
                     <a href="#" class="social">
                         <img src="./assets/facebook-preto.png" alt="icone do facebook" width="50" height="50" />
